# goal2plan

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-kernel.yml  ci.yml
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/models/: goal_dsl.py
services/api/app/routers/: feedback.py  goals.py  plan.py  questions.py
services/api/tests/: test_goal_parse.py  test_health.py  test_plan.py  test_questions.py
services/decision_kernel/: pyproject.toml
services/decision_kernel/dkernel/: __init__.py  cli.py  config.py  evidence.py  optimizer.py  policies.py  scoring.py  voi.py
services/decision_kernel/dkernel/data/: adapters.py  synth.py
services/decision_kernel/dkernel/features/: pipeline.py
services/decision_kernel/dkernel/forecasting/: darts_forecaster.py
services/decision_kernel/dkernel/learner/: llm_interface.py  llm_providers.py  ml.py  prompts.py  trainer.py
services/decision_kernel/dkernel/optimization/: ortools_optimizer.py
services/decision_kernel/tests/: test_cli_e2e.py  test_data.py  test_evidence.py  test_features.py  test_forecasting.py  test_learner_llm.py  test_learner_ml.py  test_optimization.py  test_scoring.py  test_voi.py
